# haskellFFT

./: CHANGELOG.md  Readme.md  fft-haskell.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Fft.hs
test/: ComplexTest.hs  Instances.hs  PolynomialTest.hs  Spec.hs  TestUtils.hs
