cabal-version:   3.0
name:            fft-haskell
version:         0.1.0.0
license:         NONE
author:          Max Mynter
maintainer:      maxmynter@me.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable fft-haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
