cabal-version:   3.0
name:            fft-haskell
version:         0.1.0.0
license:         MIT
author:          Max Mynter
maintainer:      maxmynter@me.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: Fft
    build-depends: base ^>=4.19.1.0
    hs-source-dirs: src
    default-language: Haskell2010

executable fft-haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0, QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fft-haskell-test
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: 
                     PolynomialTest
                     ComplexTest
                     Instances
                     TestUtils
    build-depends:    base ^>=4.19.1.0
                    , fft-haskell
                    , QuickCheck
                    , ansi-terminal
    hs-source-dirs:   test
    test-show-details: direct
    default-language: Haskell2010
